{
  "version": 4,
  "terraform_version": "0.12.3",
  "serial": 23,
  "lineage": "a241c4af-ee4a-4eba-cb7e-e7b5cf4ef477",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "t1_tnode_instance_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fb2dd0b481d4dc1a",
            "arn": "arn:aws:ec2:eu-west-2:799980351101:instance/i-02599c2c3fbca4975",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ansible-training-1-sts-instance-profile",
            "id": "i-02599c2c3fbca4975",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ansible-training-1-sshkey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-07e41c872f6e2e28c",
            "private_dns": "ip-10-0-1-172.eu-west-2.compute.internal",
            "private_ip": "10.0.1.172",
            "public_dns": "ec2-3-8-3-123.eu-west-2.compute.amazonaws.com",
            "public_ip": "3.8.3.123",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-090a8f1b0847b5476",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a728145d37eddf20",
            "tags": {
              "Account": "799980351101",
              "InfraName": "ansible-training-1",
              "Name": "t1-tnode1.at.local",
              "Owner": "arn:aws:iam::799980351101:user/kris",
              "User": "AIDA3UQULNZ62GZRPYKRI"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03b12f353781804a9",
              "sg-06f03693acc9abf31",
              "sg-0d0c264b104caf187"
            ]
          },
          "depends_on": [
            "aws_iam_instance_profile.sts-instance-profile",
            "aws_security_group.cloud-ssh",
            "aws_security_group.web-public-egress",
            "aws_security_group.web-public-ingress",
            "aws_subnet.t1_public_subnet",
            "data.aws_ami.rhel_7_7_aws_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "t1_tnode_instance_2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fb2dd0b481d4dc1a",
            "arn": "arn:aws:ec2:eu-west-2:799980351101:instance/i-0edf4f07e3bfbec0f",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ansible-training-1-sts-instance-profile",
            "id": "i-0edf4f07e3bfbec0f",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ansible-training-1-sshkey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-06582f4b35d4f65ec",
            "private_dns": "ip-10-0-1-97.eu-west-2.compute.internal",
            "private_ip": "10.0.1.97",
            "public_dns": "ec2-3-8-146-237.eu-west-2.compute.amazonaws.com",
            "public_ip": "3.8.146.237",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-05a5ed24bac8549ea",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a728145d37eddf20",
            "tags": {
              "Account": "799980351101",
              "InfraName": "ansible-training-1",
              "Name": "t1-tnode2.at.local",
              "Owner": "arn:aws:iam::799980351101:user/kris",
              "User": "AIDA3UQULNZ62GZRPYKRI"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03b12f353781804a9",
              "sg-06f03693acc9abf31",
              "sg-0d0c264b104caf187"
            ]
          },
          "depends_on": [
            "aws_iam_instance_profile.sts-instance-profile",
            "aws_security_group.cloud-ssh",
            "aws_security_group.web-public-egress",
            "aws_security_group.web-public-ingress",
            "aws_subnet.t1_public_subnet",
            "data.aws_ami.rhel_7_7_aws_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "t1_tnode_instance_3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fb2dd0b481d4dc1a",
            "arn": "arn:aws:ec2:eu-west-2:799980351101:instance/i-02c1dc7b3a026b12d",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ansible-training-1-sts-instance-profile",
            "id": "i-02c1dc7b3a026b12d",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ansible-training-1-sshkey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0fcc8f7542e6f7604",
            "private_dns": "ip-10-0-1-71.eu-west-2.compute.internal",
            "private_ip": "10.0.1.71",
            "public_dns": "ec2-3-10-221-29.eu-west-2.compute.amazonaws.com",
            "public_ip": "3.10.221.29",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-099744b4540e716de",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a728145d37eddf20",
            "tags": {
              "Account": "799980351101",
              "InfraName": "ansible-training-1",
              "Name": "t1-tnode3.at.local",
              "Owner": "arn:aws:iam::799980351101:user/kris",
              "User": "AIDA3UQULNZ62GZRPYKRI"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03b12f353781804a9",
              "sg-06f03693acc9abf31",
              "sg-0d0c264b104caf187"
            ]
          },
          "depends_on": [
            "aws_iam_instance_profile.sts-instance-profile",
            "aws_security_group.cloud-ssh",
            "aws_security_group.web-public-egress",
            "aws_security_group.web-public-ingress",
            "aws_subnet.t1_public_subnet",
            "data.aws_ami.rhel_7_7_aws_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default_gateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-09f03207a3c5951c2",
            "owner_id": "799980351101",
            "tags": {
              "Account": "799980351101",
              "InfraName": "ansible-training-1",
              "Owner": "arn:aws:iam::799980351101:user/kris",
              "User": "AIDA3UQULNZ62GZRPYKRI"
            },
            "vpc_id": "vpc-0a57b8e78eecb58c9"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-05686888f9591aca7",
            "owner_id": "799980351101",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09f03207a3c5951c2",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Account": "799980351101",
              "InfraName": "ansible-training-1",
              "Owner": "arn:aws:iam::799980351101:user/kris",
              "User": "AIDA3UQULNZ62GZRPYKRI"
            },
            "vpc_id": "vpc-0a57b8e78eecb58c9"
          },
          "depends_on": [
            "aws_internet_gateway.default_gateway"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "t1_public_subnet_asoc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-023e2291ded9ab32e",
            "route_table_id": "rtb-05686888f9591aca7",
            "subnet_id": "subnet-0a728145d37eddf20"
          },
          "depends_on": [
            "aws_route_table.public_route",
            "aws_subnet.t1_public_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ansible-training-1_security_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:799980351101:security-group/sg-0bdc57035ebaee14e",
            "description": "Network rules for ansible-training-1 env",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "id": "sg-0bdc57035ebaee14e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "ansible-training-1_security_group",
            "name_prefix": null,
            "owner_id": "799980351101",
            "revoke_rules_on_delete": false,
            "tags": {
              "Account": "799980351101",
              "InfraName": "ansible-training-1",
              "Name": "ansible-training-1_security_group",
              "Owner": "arn:aws:iam::799980351101:user/kris",
              "User": "AIDA3UQULNZ62GZRPYKRI",
              "infra_name": "ansible-training-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a57b8e78eecb58c9"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cloud-ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:799980351101:security-group/sg-03b12f353781804a9",
            "description": "Security group that allows public ingress over SSH.",
            "egress": [],
            "id": "sg-03b12f353781804a9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "cloud-ssh",
            "name_prefix": null,
            "owner_id": "799980351101",
            "revoke_rules_on_delete": false,
            "tags": {
              "Account": "799980351101",
              "InfraName": "ansible-training-1",
              "Owner": "arn:aws:iam::799980351101:user/kris",
              "User": "AIDA3UQULNZ62GZRPYKRI"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a57b8e78eecb58c9"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web-public-egress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:799980351101:security-group/sg-0d0c264b104caf187",
            "description": "Security group that allows egress to the internet for instances over HTTP and HTTPS.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-0d0c264b104caf187",
            "ingress": [],
            "name": "web-public-egress",
            "name_prefix": null,
            "owner_id": "799980351101",
            "revoke_rules_on_delete": false,
            "tags": {
              "Account": "799980351101",
              "InfraName": "ansible-training-1",
              "Owner": "arn:aws:iam::799980351101:user/kris",
              "User": "AIDA3UQULNZ62GZRPYKRI"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a57b8e78eecb58c9"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web-public-ingress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:799980351101:security-group/sg-06f03693acc9abf31",
            "description": "Security group that allows public ingress to instances, HTTP, HTTPS and more.",
            "egress": [],
            "id": "sg-06f03693acc9abf31",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8443
              }
            ],
            "name": "web-public-ingress",
            "name_prefix": null,
            "owner_id": "799980351101",
            "revoke_rules_on_delete": false,
            "tags": {
              "Account": "799980351101",
              "InfraName": "ansible-training-1",
              "Owner": "arn:aws:iam::799980351101:user/kris",
              "User": "AIDA3UQULNZ62GZRPYKRI"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a57b8e78eecb58c9"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "t1_public_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:799980351101:subnet/subnet-0a728145d37eddf20",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0a728145d37eddf20",
            "map_public_ip_on_launch": true,
            "owner_id": "799980351101",
            "tags": {
              "Account": "799980351101",
              "InfraName": "ansible-training-1",
              "Name": "t1-default-public-subnet",
              "Owner": "arn:aws:iam::799980351101:user/kris",
              "Type": "Public",
              "User": "AIDA3UQULNZ62GZRPYKRI",
              "infra_name": "ansible-training-1"
            },
            "vpc_id": "vpc-0a57b8e78eecb58c9"
          },
          "depends_on": [
            "aws_vpc.cloud"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "cloud",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:799980351101:vpc/vpc-0a57b8e78eecb58c9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0dd6bb73eb7a677f4",
            "default_route_table_id": "rtb-007a9abfce1a85ada",
            "default_security_group_id": "sg-0b1cacfa5a2c1a2ec",
            "dhcp_options_id": "dopt-303b6f58",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0a57b8e78eecb58c9",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-007a9abfce1a85ada",
            "owner_id": "799980351101",
            "tags": {
              "Account": "799980351101",
              "InfraName": "ansible-training-1",
              "Name": "ansible-training-1",
              "Owner": "arn:aws:iam::799980351101:user/kris",
              "User": "AIDA3UQULNZ62GZRPYKRI"
            }
          }
        }
      ]
    }
  ]
}